--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -2,6 +2,14 @@ server {
     listen 80;
     charset utf-8;
     access_log off;
+    
+    location /account {
+        proxy_pass http://app:8090;
+        proxy_set_header Host $host:$server_port;
+        proxy_set_header X-Forwarded-Host $server_name;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
 
     location / {
         proxy_pass http://app:8080;
