--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -5,10 +5,8 @@ server {
     
     location /account {
         proxy_pass http://localhost:8090;
-        proxy_set_header Host $host:$server_port;
-        proxy_set_header X-Forwarded-Host $server_name;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_buffers 16 4k;
+        proxy_buffer_size 2k;
     }
 
     location / {
