--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -4,7 +4,7 @@ server {
     access_log off;
     
     location /account {
-        proxy_pass http://localhost:8090;
+        proxy_pass http://account-ms:8090;
         proxy_buffers 16 4k;
         proxy_buffer_size 2k;
     }
